--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pre-onboarding-12th-3-8",
+  "name": "pre-onboarding-12th-3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
